# pet-reminder

./: .gitignore  LICENSE  README.md  create-public-repo.ps1  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos.yml  build-windows.yml  validate.yml
src/: App.tsx  SettingsApp.tsx  audio.ts  main.tsx  overlay-fixed.css  pets.ts  platform.ts  reminderScheduler.ts  runtimeState.ts  settings.ts  styles.css  time.ts  types.ts  wave-overrides.css  windowController.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: BreakScreen.tsx  CompanionPanel.tsx  PetCloud.tsx  SettingsPanel.tsx
